# LoopEquations

./: .gitignore  ComplexToReal.py  ContinuedFractions.py  CurveSimulator.py  LoopEquations.py  MpmQuad.py  MpmathSolver.py  QuadPy.py  QuantumSolution.html  RationalNumberGenerator.py  SDE.py  ScipyQuad.py  SortedArrayIter.py  TestForPython.m  TestForPython.nb  TestingSympyGradient.py  Timer.py  TripleIntegral.py  VectorOperations.py  VorticityCorrelation.jl  VorticityCorrelation.py  index.html  math2py.py  pade.py  parallel.py  plot.py  readme.md  requirements.txt  test.jl  test.txt  testMathematica.py  test_ConvertBlockMatrix.py  test_RandomFractions.py
CPP/: CMakeLists.txt  DS.h  README.txt  delme.c
CPP/src/: BlockMatrixUtils.h  DS.cpp  DS.h  EigenProblem.cpp  Euler.cpp  Euler.cu  Euler.h  GetGpuProps.cu  MatrixMaker.cpp  MatrixMaker.h  MergeSortedReader.h  MergeSorter.cpp  RandomWalker.h  SamplesBinner.cpp  SamplesBinner.h  SamplesSorter.cpp  SortedMerger.h  testEigen.h
CPP/src/arpackpp-2.3.0/include/: arerror.h
CPP/src/arpackpp-2.3.0/patch/: arerror.cpp
Notebooks/: EnstrophyGenFunc.nb  EulerEnsembleAverage.nb  EulerPhi.nb  FEquationasAnalytic.m  GammaMoments.nb  InequalityDissipation.nb  MovingFourVertices.m  PadeBorel.m  RestrictedO3GroupIntegral.m  SComputation.nb  SaddlePointFourierIntegral.m  SphericalThetaIntegral.m  SphericalThetaIntegral.nb  SymmetricFixedPoint.m  TestCotCDF.nb  ThetaIntegral.m  VorticityCorrelation.nb  testFractions.nb
plots/: group_integral_pairs.40.np  pairs_degree_ranges.40.np
runConfigurations/: GroupIntegrals.run.xml  SDE_laptop.run.xml  VorticityCorrelation (M=1'000'000, T=1'000, C=1, CPU=1, serial).run.xml  VorticityCorrelation (plot).run.xml  VorticityCorrelation.run.xml
scripts/: bin.sh  collect.sh  index.sh  inverse.sh  merge.sh  plot.sh  plot_local.sh  python  run.sh  run_gpu.sh  run_local.sh  sort.sh  submit.sh  submit_binner.sh  submit_gpu.sh  submit_local.sh  submit_main.sh  submit_pja.sh  submit_plot.sh  submit_sort.sh
